# MaiBot

./: ![新版麦麦开始学习.bat  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CORRECTED_ARCHITECTURE.md  Dockerfile  EULA.md  HEARFLOW_API_说明文档.md  MaiBot插件开发文档.md  PRIVACY.md  README.md  action_activation_system_usage.md  bot.py  changes.md  debug_config.py  docker-compose.yml  interested_rates.txt  launcher.py  mongodb_to_sqlite .bat  mongodb_to_sqlite.bat  openai_client.py  pyproject.toml  reload_config_now.py  requirements.txt  run_amds.bat  run_voice.bat  start_lpmm.bat  test_del_memory.py  test_fix_memory_points.py  test_log_error.py  test_log_fix.py  test_normal_chat_stop.py  消息发送API使用说明.md
.devcontainer/: devcontainer.json
changelogs/: changelog.md  changes.md
docs/: 0.6Bing.md  Bing.md  HeartFC_readme.md  HeartFC_system.md  docker_deploy_local_build.md  model_configuration_guide.md  plugin_detailed_guide.md  plugin_guide_overview.md  plugin_loading_paths.md  plugin_quick_start.md
helm-chart/: .gitlab-ci.yml  .helmignore  Chart.yaml  README.md  values.yaml
scripts/: 070configexe.py  analyze_expression_similarity.py  analyze_expressions.py  analyze_group_similarity.py  cleanup_expressions.py  configexe.toml  expression_stats.py  find_similar_expression.py  group_similarity_details.txt  import_openie.py  info_extraction.py  interest_monitor_gui.py  interest_value_analysis.py  log_viewer.py  log_viewer_optimized.py  manifest_tool.py  message_retrieval_script.py  mongodb_to_sqlite.py  preview_expressions.py  raw_data_preprocessor.py  run.sh  run_lpmm.sh  test_hfc_performance.py  test_interest_embedding.py  test_version_compatibility.py  text_length_analysis.py  view_hfc_stats.py
src/: main.py  plugins.md  test.py
template/: bot_config_meta.toml  bot_config_template.toml  lpmm_config_template.toml  model_config_template.toml  template.env
tests/: test_build_readable_messages.py  test_config.py  test_data_validation.py  test_extract_messages.py  (+4 more)
(+674 files in other folders)
